kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpt-web
  labels:
    app: gpt-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gpt-web
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gpt-web
    spec:
      containers:
        - image: dadaloser/gpt-web
          name: gpt-web
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 300m
              memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gpt-web
  name: gpt-web
spec:
  ports:
    - name: gpt-web
      port: 3002
      protocol: TCP
      targetPort: 3002
  selector:
    app: gpt-web
  type: ClusterIP
